* Tue Jan 12 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.0-0
- In response to the DISA STIG Requirements
  - Added 'open_by_handle_at' to the 'access' key
  - Added watches on /varlog/faillock and /var/log/tallylock
  - Added watches on /usr/sbin/insmod and /bin/kmod
  - Added permissions modification notification for 'chmod'
- Renamed auditd::add_rules to auditd::rule
- Split the audit permissions rules into separate lines
- Disabled chmod auditing by default

* Mon Dec 26 2016 Ralph Wright <rwright@onyxpoint.com> - 7.0.0-0
* Mon Dec 26 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.0.0-0
- Refactor to work in Puppet 4 Changes
- Updated acceptance tests

* Mon Dec 12 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.0-0
- Update version to reflect SIMP6 dependencies

* Fri Dec 09 2016 Nick Markowski <nmarkowski@keywcorp.com> - 7.0.0-0
- Updated global catalysts
- Changed default log facility to local5.
- Added a drop rule for crond events

* Tue Nov 22 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.1.2-0
- Minor cleanup

* Mon Sep 26 2016 Jeanne Greulich, Liz Nemsick - 5.1.0-0
- Allow user to specify syslog facility and priority for audit record
  messages.
- Allow user to enable/disable audit record syslog messaging independent
  of the presence of forwarding logging servers.
- Added a file resource to detect and fix incorrect permissions on the
  /var/log/audit/audit.log file.

* Mon Aug 29 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 5.0.4-0
- Added booleans to toggle sections of audit rules.

* Tue Jul 26 2016 Lucas Yamanishi <lucas.yamanishi@onyxpoint.com> - 5.0.3-0
- Fix for strict_variables failure

* Wed Jul 06 2016 Nick Markowski <nmarkowski@keywcorp.com> - 5.0.2-0
- Added a default audit rule for 'renameat', per CCE-26651-0.
- Added an auditd_version fact.
- Updated validation for *_action lists to differentiate between
  auditd versions.
- Updated module to use new rake helper to auto-gen .spec file.
